# unix-programming

./: .gitignore  cmake-variants.yaml
.cache/clangd/index/: CTFibonacci.h.015E5BC7A4048409.idx  CTFibonacci.inl.395134747CFB05AC.idx  Fibonacci.cpp.227B2470551412A0.idx  Fibonacci.h.9D5E278806B3785B.idx  MainWindow.cpp.6EAF59A5D25300C0.idx  MainWindow.h.B48835297071B710.idx  Orecvfd.c.A8AC16E4738188DF.idx  apue.h.E5A3DEC24F37A9BE.idx  baselib.cpp.CD8159114C4B1D4E.idx  baselib.h.A8C5F3E4152B641A.idx  bufargs.c.DDDF8915BD08C4E7.idx  cliconn.c.AF0F7485D2617383.idx  clrfl.c.B7F88C293E647156.idx  daemonize.c.7AD7114FDC0C38AB.idx  error.c.66B0582938963971.idx  errorlog.c.67C564352ED9E6C8.idx  lockreg.c.DF59A424FE2076AF.idx  locktest.c.C3832B9072DA67E2.idx  main.cpp.1CB48924E697339D.idx  main.cpp.6ACDA6915418C070.idx  main.cpp.6F8728C9CC0661EB.idx  main.cpp.9C00F7CE5B27EA9E.idx  main.cpp.E8310B6C1C3F7527.idx  nspipe.c.D738F5B2B2C59A96.idx  openmax.c.B2F90DEEE36842FE.idx  pathalloc.c.7821D9FA2D08DFF6.idx  popen.c.1C3251CC26746C0D.idx  prexit.c.FAD316F3E006450C.idx  prmask.c.173545FF43E539E2.idx  ptyfork.c.628B411AF750CB2D.idx  ptyopen.c.F451C3D327F68BA6.idx  readn.c.3B11564E379D1D4C.idx  recvfd.c.1D45D8461FDD2779.idx  semaph.c.1C82D8FDE501BE25.idx  senderr.c.A2847D63E03F813C.idx  sendfd.c.B3D0C75AA54BB42F.idx  servaccept.c.888162F6BCD312B0.idx  servlisten.c.2EDCD6ECA0EE2D58.idx  setfd.c.9A53FBE2F83301B9.idx  setfl.c.603ECE5336709154.idx  (+9 more)
source/: CMakeLists.txt
source/apuelib/: CMakeLists.txt  source.txt
source/apuelib/include/: apue.h
source/apuelib/source/: errorlog.c  ptyfork.c  strerror.c
source/examples/: CMakeLists.txt
source/examples/cp/: CMakeLists.txt  main.cpp
source/examples/ls/: CMakeLists.txt  main.cpp
